# Publish-GPT

./: LICENSE.md  README.md  pyproject.toml
publishgpt/: book.py  main.py
